[CAN]Enable CAN compile but not tested
Description of Change:
        1. Add datasheet
        2. add can configuration
Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/F407VGT6_Simulated_AutoNode/.vscode/settings.json
+++ b/F407VGT6_Simulated_AutoNode/.vscode/settings.json
@@ -5,6 +5,9 @@
         "variant": "c",
         "time.h": "c",
         "select.h": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "main.h": "c",
+        "stm32f4xx_hal.h": "c",
+        "stm32f4xx_hal_conf.h": "c"
     }
 }
