--- a/H750VBT6_Simulated_AutoNode/.config
+++ b/H750VBT6_Simulated_AutoNode/.config
@@ -132,7 +132,9 @@ CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
 # CONFIG_RT_SERIAL_USING_DMA is not set
 CONFIG_RT_SERIAL_RB_BUFSZ=64
-# CONFIG_RT_USING_CAN is not set
+CONFIG_RT_USING_CAN=y
+# CONFIG_RT_CAN_USING_HDR is not set
+CONFIG_RT_CAN_USING_CANFD=y
 # CONFIG_RT_USING_CPUTIME is not set
 # CONFIG_RT_USING_I2C is not set
 # CONFIG_RT_USING_PHY is not set
@@ -1040,5 +1042,35 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 
 #
 # samples: kernel and components samples
+#
+
+#
+# Hardware Drivers Config
+#
+CONFIG_SOC_STM32H750VBT6=y
+
+#
+# Onboard Peripheral Drivers
+#
+# CONFIG_BSP_USING_LCD_SPI is not set
+# CONFIG_BSP_USING_OV2640 is not set
+
+#
+# On-chip Peripheral Drivers
+#
+# CONFIG_BSP_USING_GPIO is not set
+CONFIG_BSP_USING_FDCAN=y
+CONFIG_BSP_USING_FDCAN1=y
+CONFIG_BSP_USING_FDCAN2=y
+# CONFIG_BSP_USING_UART is not set
+# CONFIG_BSP_USING_QSPI is not set
+# CONFIG_BSP_USING_SPI is not set
+# CONFIG_BSP_USING_DCMI is not set
+# CONFIG_BSP_USING_I2C is not set
+# CONFIG_BSP_USING_ONCHIP_RTC is not set
+# CONFIG_BSP_USING_ON_CHIP_FLASH is not set
+
+#
+# Board extended module Drivers
 #
 CONFIG_RT_STUDIO_BUILT_IN=y
