--- a/H750VBT6_Simulated_AutoNode/CMakeLists.txt
+++ b/H750VBT6_Simulated_AutoNode/CMakeLists.txt
@@ -40,7 +40,6 @@ SET(CMAKE_CXX_STANDARD 14)
 PROJECT(Simulated-GW-ECU C CXX ASM)
 
 aux_source_directory(applications APP_SRCS)
-SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output_binaries)
 
 INCLUDE_DIRECTORIES(
 	.
@@ -247,10 +246,11 @@ ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf
 )
 
 ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD
-    COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_PROJECT_NAME}.axf
+COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_PROJECT_NAME}.hex COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf)
+
+ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD
     COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_PROJECT_NAME}.hex
     COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME}.elf ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_PROJECT_NAME}.bin
-    COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf
 )
 
 add_custom_target(flash
