--- a/H750VBT6_Simulated_AutoNode/.config
+++ b/H750VBT6_Simulated_AutoNode/.config
@@ -135,7 +135,7 @@ CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_SERIAL_USING_DMA is not set
 CONFIG_RT_SERIAL_RB_BUFSZ=64
 CONFIG_RT_USING_CAN=y
-# CONFIG_RT_CAN_USING_HDR is not set
+CONFIG_RT_CAN_USING_HDR=y
 CONFIG_RT_CAN_USING_CANFD=y
 # CONFIG_RT_USING_CPUTIME is not set
 # CONFIG_RT_USING_I2C is not set
