[FDCAN]Can send frame
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/H750VBT6_Simulated_AutoNode/.vscode/settings.json
+++ b/H750VBT6_Simulated_AutoNode/.vscode/settings.json
@@ -11,7 +11,9 @@
         "stm32h7xx_hal.h": "c",
         "stm32h7xx_hal_conf.h": "c",
         "kconfig": "cpp",
-        "board.h": "c"
+        "board.h": "c",
+        "rtdbg.h": "c",
+        "thread": "cpp"
     },
     "cortex-debug.variableUseNaturalFormat": false
 }
