[FDCAN]Add test case.
Description of Change:

Author:
	sxha951@gmail.com
Reviewer:
	sxha951@gmail.com
Test:
	Pass

--- a/H750VBT6_Simulated_AutoNode/.vscode/settings.json
+++ b/H750VBT6_Simulated_AutoNode/.vscode/settings.json
@@ -13,7 +13,8 @@
         "kconfig": "cpp",
         "board.h": "c",
         "rtdbg.h": "c",
-        "thread": "cpp"
+        "thread": "cpp",
+        "sstream": "c"
     },
     "cortex-debug.variableUseNaturalFormat": false
 }
