--- a/H750VBT6_Simulated_AutoNode/.vscode/launch.json
+++ b/H750VBT6_Simulated_AutoNode/.vscode/launch.json
@@ -8,12 +8,33 @@
             "program" : "build/Simulated-GW-ECU.elf",
             "args":[],
             "stopAtConnect": false,
+            "runToEntryPoint": "main",
             "cwd": "${workspaceRoot}",
             "environment":[],
             "externConsole":false,
             "MIMode":"gdb",
             "miDebuggerPath": "C:/AptivDevEnv/gcc-arm-none-eabi-10.3/bin/arm-none-eabi-gdb.exe",
             "miDebuggerServerAddress": "localhost:3333"
+        },
+        {
+            "name": "Openocd Debug",
+            "cwd": "${workspaceFolder}",
+            // "runToMain": true,
+            "runToEntryPoint": "rt_hw_board_init",
+            "executable": "build/Simulated-GW-ECU.elf",       
+            "request": "launch",
+            "type": "cortex-debug",
+            "servertype": "openocd",
+            "interface":"swd",
+            "device": "STM32H750x",                
+            "configFiles": [
+                "openocd-scripts/interface/cmsis-dap.cfg",          
+                "openocd-scripts/target/stm32h7x_1M.cfg",         
+
+            ],
+            "svdFile": "STM32H750x.svd",
+            "armToolchainPath": "C:/AptivDevEnv/gcc-arm-none-eabi-10.3/bin",
+            "gdbPath": "C:/AptivDevEnv/gcc-arm-none-eabi-10.3/bin/arm-none-eabi-gdb.exe",
         },
         {
             "name": "Pyocd Debug",
