--- a/H750VBT6_Simulated_AutoNode/CMakeLists.txt
+++ b/H750VBT6_Simulated_AutoNode/CMakeLists.txt
@@ -271,7 +271,7 @@ ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf POST_BUILD
     COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.axf
     COMMAND ${CMAKE_OBJCOPY} -O ihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.s19
     COMMAND ${CMAKE_SIZE} ${CMAKE_PROJECT_NAME}.elf
-    COMMAND ${CMAKE_READ} -l -h  ${CMAKE_PROJECT_NAME}.elf
+    # COMMAND ${CMAKE_READ} -l -h  ${CMAKE_PROJECT_NAME}.elf
 )
 
 add_custom_target(flash
