[PATH]change tool path

--- a/H750VBT6_Simulated_AutoNode/CMakeLists.txt
+++ b/H750VBT6_Simulated_AutoNode/CMakeLists.txt
@@ -10,7 +10,7 @@ if(WIN32)
     SET(TOOL_DIR "D:/Software_Tools/env-windows-1.5.0/tools/bin/../../tools/gnu_gcc/arm_gcc/mingw")
 	set(PYTHON_EXECUTABLE "C:/Users/dj461v/AppData/Local/Programs/Python/Python38/python.exe")
 elseif(UNIX)
-    SET(TOOL_DIR "/home/caojun/wkspace/tools/gcc-arm-none-eabi-6-2017-q2-update/")
+    SET(TOOL_DIR "/home/caojun/wkspace/tools/gcc-arm-none-eabi-10.3-2021.10")
 endif()
 
 message(STATUS "TOOL_DIR: ${TOOL_DIR}")
