[canTP]ADD CANTP MODUEL
which need further debug

--- a/H750VBT6_Simulated_AutoNode/.vscode/settings.json
+++ b/H750VBT6_Simulated_AutoNode/.vscode/settings.json
@@ -14,7 +14,8 @@
         "board.h": "c",
         "rtdbg.h": "c",
         "thread": "cpp",
-        "sstream": "c"
+        "sstream": "c",
+        "rtthread.h": "c"
     },
     "cortex-debug.variableUseNaturalFormat": false
 }
