--- a/H750VBT6_Simulated_AutoNode/.config
+++ b/H750VBT6_Simulated_AutoNode/.config
@@ -39,7 +39,7 @@ CONFIG_RT_KSERVICE_USING_STDLIB=y
 CONFIG_RT_USING_DEBUG=y
 CONFIG_RT_DEBUGING_COLOR=y
 CONFIG_RT_DEBUGING_CONTEXT=y
-# CONFIG_RT_DEBUGING_AUTO_INIT is not set
+CONFIG_RT_DEBUGING_AUTO_INIT=y
 
 #
 # Inter-Thread communication
@@ -286,7 +286,36 @@ CONFIG_RT_LIBC_TZ_DEFAULT_SEC=0
 # Utilities
 #
 # CONFIG_RT_USING_RYM is not set
-# CONFIG_RT_USING_ULOG is not set
+CONFIG_RT_USING_ULOG=y
+# CONFIG_ULOG_OUTPUT_LVL_EMERG is not set
+# CONFIG_ULOG_OUTPUT_LVL_ALERT is not set
+# CONFIG_ULOG_OUTPUT_LVL_CRIT is not set
+# CONFIG_ULOG_OUTPUT_LVL_ERROR is not set
+# CONFIG_ULOG_OUTPUT_LVL_WARNING is not set
+# CONFIG_ULOG_OUTPUT_LVL_NOTICE is not set
+# CONFIG_ULOG_OUTPUT_LVL_INFO is not set
+CONFIG_ULOG_OUTPUT_LVL_DEBUG=y
+CONFIG_ULOG_OUTPUT_LVL=7
+# CONFIG_ULOG_USING_ISR_LOG is not set
+CONFIG_ULOG_ASSERT_ENABLE=y
+CONFIG_ULOG_LINE_BUF_SIZE=128
+# CONFIG_ULOG_USING_ASYNC_OUTPUT is not set
+
+#
+# log format
+#
+# CONFIG_ULOG_OUTPUT_FLOAT is not set
+CONFIG_ULOG_OUTPUT_TIME=y
+CONFIG_ULOG_TIME_USING_TIMESTAMP=y
+CONFIG_ULOG_OUTPUT_LEVEL=y
+CONFIG_ULOG_OUTPUT_TAG=y
+# CONFIG_ULOG_OUTPUT_THREAD_NAME is not set
+# end of log format
+
+CONFIG_ULOG_BACKEND_USING_CONSOLE=y
+# CONFIG_ULOG_BACKEND_USING_FILE is not set
+CONFIG_ULOG_USING_FILTER=y
+CONFIG_ULOG_USING_SYSLOG=y
 # CONFIG_RT_USING_UTEST is not set
 # CONFIG_RT_USING_VAR_EXPORT is not set
 # CONFIG_RT_USING_RESOURCE_ID is not set
