--- a/H750VBT6_Simulated_AutoNode/.vscode/settings.json
+++ b/H750VBT6_Simulated_AutoNode/.vscode/settings.json
@@ -18,7 +18,9 @@
         "rtthread.h": "c",
         "array": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "ulog.h": "c",
+        "syslog.h": "c"
     },
     "cortex-debug.variableUseNaturalFormat": false
 }
